_sass/_base.scss
body {
  background-color: #000;
  color: white;
  font-family: 'Anonymous Pro', monospace;
}

.page-content {
  padding-top: 150px;
}

h1, h2{
  font-weight: 600;
}

p{
  font-size: 18px;
}

.menu{
  margin-top: 16px;
}

.row {
  margin: 0;
}

button{
  background-color: #C72838;
  border-color: #fff;
  padding: 15px 20px;
  font-size: 16px;
  font-weight: 600;
  margin-top: 20px;
  margin-right: 10px;
}

button:hover{
  background-color: #8E1923;
}

.top-menu {
  position: fixed;
  width: 100%;
  z-index: 1;
  padding: 20px 0px;
  background-color: #fff;
  font-size: 28px;
  text-align: center;
  box-shadow: 0 1px 1px rgba(0,0,0,.4);
}

.top-menu a {
  color: #000;
  margin-top: 30px;
  margin-bottom: 30px;
}

.banner-bg{
  background: url(images/gif2.gif);
  background-position: 0px 100px;
  background-size: cover;
  min-height: 580px;
  padding-top: 60px;
  text-align: left;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
}

.content-block{
  margin-top: 40px;
  margin-bottom: 60px;
}

.infographic{
  padding-top: 40px;
}

.disclaimer{
  background-color: #fff;
  color: #000;
}

.robot-picture{
  background: url(images/rosie.png);
  background-repeat: no-repeat;
  background-size: 336px;
  min-height: 262px;
  background-position-y: 10px;
  background-position-x: center;
}

.table-container{
  //background: url(images/pixelmountains-reverse.png);
  background-position-y: -15px;
  background-repeat: repeat-x;
  padding-top: 80px;
  background-size: 370px
}

.data-table{
  margin-top: 40px;
}

table th{
  font-weight: bold;
  font-size: 18px;
  background-color: #FFF;
  color: black;
}

table td{
  font-size: 18px;
}

.post-thumb{
  background-color: #FFF;
  padding: 12px;
}

.histories-thumb-area {
  margin-top: 30px;
}

.histories-thumb-area a {
  color: black;
  display: block;
}

.histories-thumb-area .row {
  background-color: #FFF;
  padding: 12px;
  margin-bottom: 30px;
}

.histories-thumb {
  min-height: 200px;
}

.histories-thumb img{
  width: 100%;
}

.post-thumb a{
  color: black;
}

.post-thumb img{
  width: 100%;
}

.more-posts-link{
  color: #FFF;
  font-size: 18px;
}

.posts-thumb-area{
  margin-top: 20px;
}

footer{
  height: 270px;
  background-color: #43007F;
  color: #fff;
  padding-top: 20px;
}

footer a{
  color: #fff;
  font-size: 20px;
}

footer a:hover{
  color: #fff;
}
.footer-menu a{
  display: block;
}

.dsbr-footer{
  margin-top: 50px;
}

.support-cta{
  background-color: #EB4A3B;
  font-size: 2rem;
  padding: 5px;
  position: fixed;
  text-align: center;
  text-transform: uppercase;
  top: 109px;
  width: 100%;
  z-index: 1;
}

.support-cta-anchor{
  color: white;
  width: 100%;
  display: block;
  width: 100%;
}

.support-cta-anchor:hover{
  color: white;
  cursor: pointer;
}

